                       data source in DrugBankTargetProvider() rather than FASTA downloads.
  23-Jun-2021  - V0.32 Add preprocessing filter to Pharos SQL dump input and handle missing ChEMBL API results more gracefully
  24-Jun-2021  - V0.33 Get release versions from data source for ChEMBL, DrugBank and Pharos and propagate these in all resource files
  24-Jun-2021  - V0.34 Add getVersion() method in PharosTargetProvider() module
  25-Jun-2021  - V0.35 Add a target_name attributed to Pharos, DrugBank and ChEMBL cofactor data.
  25-Jun-2021  - V0.36 Update method prototype skipExisting -> skip in ChEMBLTargetActivityProvider().
  26-Jun-2021  - V0.37 Serialize DrugBank cofactors in pickle - resolve missing target names -
  26-Jun-2021  - V0.38 Make chemical component and BIRD definitions singular.
  27-Jun-2021  - V0.39 Add diagnostics to capture statistics for ChEMBL and Pharos mapped an unmapped cofactors
  27-Jun-2021  - V0.40 Refactor FASTA comment parsing strategy and make fewer assumptions about comment content
  27-Jun-2021  - V0.41 Add annotation of neighbor interactions to cofactor activity selections
  30-Jun-2021  - V0.42 Add reload() public methods to feature and cofactor provider modules
   1-Jul-2021  - V0.43 Adjustment linting rules to preserve unreferenced internal methods
   2-Jul-2021  - V0.44 Add the remaining subset of the antibody data from SAbDab and add taxonomy filtering for CARD features
   2-Jul-2021  - V0.45 Handle to testing case lacking taxonomy in CARDTargetFeatureProvider()
   7-Jul-2021  - V0.46 Add IMGTTargetProvider() and IMGTTargetFeatureProvider() modules and associated tests
  11-Jul-2021  - V0.47 Add support for "alignedRegions" in sequence alignment result files
  12-Jul-2021  - V0.48 Export aligned regions as lists of dictionaries in JSON
  12-Jul-2021  - V0.49 Adjust diagnostics for long running activity workflow